fix card image stretching

--- a/src/blocks/element/__image/element__image.css
+++ b/src/blocks/element/__image/element__image.css
@@ -2,5 +2,7 @@
   height: 282px;
   width: 282px;
 
+  object-fit: cover;
+
   cursor: pointer;
 }
